<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cdnstext">Current DNS:</string>
    <string name="default_dns">Default DNS provided by network:</string>
    <string name="firewall_rules_available">FIREWALL RULES AVAILABLE, CURRENT SETTINGS WILL BE IGNORED</string>
    <string name="priority_text">When enabled auto setting, the current network is top priority, while global dns is low priority</string>

    <string name="global_category">Global</string>
    <string name="wifi_category">Wi-Fi</string>
    <string name="mobile_category">Mobile network</string>
    <string name="bt_category">Bluetooth</string>
    <string name="eth_category">Ethernet</string>
    <string name="wimax_category">WiMax</string>

    <string name="port">Port(optional)</string>

    <string name="set_succeed">Setting DNS succeed</string>
    <string name="set_failed">Setting DNS failed</string>
    <string name="error_setprop_failed">setprop was no affected, may need root permission</string>
    <string name="error_unknown">Unknown error occurred, may be a bug</string>
    <string name="operation_succeed">The operation was completed successfully</string>

    <string name="action_edit_resolv">DNS config file</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_restore">Restore</string>

    <string name="button_apply_ignore">Apply(Ignore current network)</string>
    <string name="button_clear">Clear</string>

    <string name="pref_category_function">FUNCTION</string>
    <string name="pref_category_appearance">APPEARANCE</string>
    <string name="pref_category_about">ABOUT</string>

    <string name="category_prop_setting">System properties misc settings</string>
    <string name="category_ndc_setting">Daemon connector detail settings</string>
    <string name="category_about_mode">About modes</string>

    <string name="pref_auto_setting">Auto setting</string>
    <string name="pref_auto_setting_summary">Set DNS when connected network</string>
    <string name="pref_enable_full_keyboard">Enable full keyboard</string>

    <string name="pref_mode">Operating mode</string>
    <string name="pref_mode_prop">System properties</string>
    <string name="pref_mode_iptables">Firewall rules</string>
    <string name="pref_mode_ndc">Daemon connector</string>
    <string name="pref_mode_vpn">VPN</string>

    <string name="pref_mode_prop_summary">System seems ignored these properties above Android 4.3</string>
    <string name="pref_mode_iptables_summary">It may led device can not send any DNS requests when using mobile network\nUninstall app will not delete already applied firewall rules, need delete it in app manually</string>
    <string name="pref_mode_ndc_summary">Need to specify network interface below Android 5.0</string>
    <string name="pref_mode_vpn_summary">Need to detect another VPN</string>

    <string name="pref_toast">Toast</string>
    <string name="pref_toast_show">Show</string>
    <string name="pref_toast_error">Except errors</string>
    <string name="pref_toast_never">Never</string>

    <string name="pref_ndc">Network interfaces name</string>
    <string name="pref_ndc_wlan">Wi-Fi</string>
    <string name="pref_ndc_rmnet">Mobile network</string>
    <string name="pref_ndc_bt">Bluetooth</string>
    <string name="pref_ndc_eth">Ethernet</string>

    <string name="pref_dns_list">DNS completing list</string>

    <string name="pref_config">Path of resolv.conf</string>

    <string name="pref_misc">Misc</string>
    <string name="pref_misc_checkprop">Check system properties</string>
    <string name="pref_misc_checkprop_summary">To detecting properties whether had set, closed it can improve little performance</string>
    <string name="pref_misc_autoflush">Flush DNS cache</string>
    <string name="pref_misc_autoflush_summary">Flush cache when had set DNS</string>

    <string name="invalid_dns">Invalid DNS</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_msg">Welcome to use DNS man!\nDo you want to read usage?</string>

    <string name="nodns_noti_text">Click to set DNS</string>
    <string name="nodns_noti">No available DNS</string>

    <string name="toast_clear">Current entry data was cleared</string>
    <string name="toast_no_root">Device was not rooted, only VPN mode available</string>
    <string name="toast_no_dns_to_restore">No DNS to restore</string>
    <string name="toast_restored">DNS was restored</string>

    <string name="no_conf">resolv.conf was not found</string>
    <string name="hint_conf">System seems ignored this file above Android 4.3.\nThis function is provided to some binary and Linux chroot.</string>
    <string name="write_conf">Write DNS resolver</string>
    <string name="default_conf">Use Google public DNS</string>
    <string name="delete_conf">Delete /etc/resolv.conf</string>

    <string name="write_conf_msg">Do you really want to write DNS resolver to /etc/resolv.conf?</string>
    <string name="default_conf_msg">Do you want to use Google public DNS?</string>
    <string name="delete_conf_msg">Do you want to delete /etc/resolv.conf? May cause the network problem!</string>
    <string name="developer">Developer</string>
    <string name="license">License</string>
    <string name="license_summary">GNU GPLv3</string>
    <string name="opensource">Source</string>
    <string name="opensource_summary">View source code on GitHub</string>
    <string name="pref_usage">Usage</string>
    <string name="pref_usage_summary">View usage on wiki</string>
    <string name="title_activity_dnsentry">DNSEntryActivity</string>
</resources>
